--- a/fingertip/src/main/res/layout/fingerprint_dialog.xml
+++ b/fingertip/src/main/res/layout/fingerprint_dialog.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingLeft="24dp"
@@ -17,7 +16,7 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        tools:text="Sign In" />
+        android:text="@string/sign_in" />
 
     <TextView
         android:id="@+id/subtitleTextView"
@@ -27,7 +26,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/titleTextView"
-        tools:text="Confirm fingerprint to continue." />
+        android:text="@string/confirm_fingerprint_to_continue" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/iconFAB"
@@ -36,7 +35,7 @@
         android:layout_marginTop="28dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/subtitleTextView"
-        tools:srcCompat="@drawable/ic_fingerprint_black_24dp" />
+        android:src="@drawable/ic_fingerprint_white_24dp" />
 
     <TextView
         android:id="@+id/errorTextView"
@@ -48,7 +47,7 @@
         app:layout_constraintLeft_toRightOf="@id/iconFAB"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@id/iconFAB"
-        tools:text="Touch sensor" />
+        android:text="@string/touch_sensor" />
 
     <LinearLayout
         android:id="@+id/buttons"
