--- a/janus-authenticator/src/main/res/values/styles.xml
+++ b/janus-authenticator/src/main/res/values/styles.xml
@@ -213,6 +213,8 @@
         <item name="bottomSheetStyle">@style/JanusBottomSliderModalStyle</item>
         <item name="android:windowCloseOnTouchOutside">false</item>
         <item name="android:windowIsTranslucent">true</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:navigationBarColor">@android:color/white</item>
         <item name="android:windowBackground">@android:color/transparent</item>
         <item name="android:backgroundDimEnabled">true</item>
     </style>
